--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'); 
+
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body, html, #root {
   margin: 0;
   padding: 0;
@@ -14,6 +19,7 @@ body, html, #root {
   position: relative;
   min-height: 100vh;
   width: 100%;
+  height: 100%;
 }
 
 .overlay-content {
