--- a/src/components/Simulation.css
+++ b/src/components/Simulation.css
@@ -1,16 +1,15 @@
-/* Make sure the simulation fills the whole screen */
 .simulation-container {
     width: 100%;
-    height: 80vh;
-    overflow: hidden; /* Prevents scrollbars */
+    height: 100vh;
+    overflow: hidden;
     background-color: #000;
     justify-self: center;
 }
 
 #show-name {
     position: absolute;
-    transform: translate(10px, -110%); /* Position relative to cursor */
-    pointer-events: none; /* Allows clicks to pass through */
+    transform: translate(10px, -110%);
+    pointer-events: none;
     transition: opacity 0.3s;
 }
 
@@ -78,7 +77,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 20px; /* Replaces margin-left for better spacing */
+    gap: 20px;
 }
 
 .switch {
@@ -125,12 +124,8 @@
   transform: translateX(1.5em);
 }
 
-/* --- Media Queries for Responsiveness --- */
-
-/* For mobile devices (screens smaller than 768px) */
 @media (max-width: 768px) {
     #show-details {
-        /* On mobile, make the details box wider and font a bit bigger */
         font-size: 2.5vmin;
         max-width: 70vmin;
     }
@@ -140,6 +135,6 @@
     }
 
     .switch {
-        font-size: 3vmin; /* Make the switch bigger on mobile */
+        font-size: 3vmin;
     }
 }
