Added Iframe and more styling

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body, html, #root {
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: orbitron;
   letter-spacing: 4px;
   color: white;
