--- a/src/components/Simulation.css
+++ b/src/components/Simulation.css
@@ -1,144 +1,5 @@
-html {
-  overflow: hidden;
-}
-
-.simulation-container {
+/* src/components/Simulation.css */
+.simulation-frame {
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #000;
-    justify-self: center;
-}
-
-#show-name {
-    position: absolute;
-    transform: translate(10px, -110%);
-    pointer-events: none;
-    transition: opacity 0.3s;
-}
-
-#show-name h2 {
-    padding: 10px 20px;
-    font-family: 'Orbitron', sans-serif;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    text-shadow:
-      0 0 8px #39f6ff,
-      0 0 16px #39f6ff,
-      0 0 32px #00eaff,
-      0 0 48px #00eaff;
-}
-
-#show-details {
-    position: absolute;
-    bottom: 100px;
-    right: 20px;
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 500;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 15px;
-    border-radius: 8px;
-    max-width: 300px;
-    pointer-events: none;
-    transition: opacity 0.3s;
-}
-
-#tools {
-    color: white;
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
-    cursor: pointer;
-    border: 1px solid #fff;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 30px;
-    background-color: #00000080;
-    z-index: 10;
-}
-
-.tool-menu {
-    position: absolute;
-    bottom: 80px;
-    left: 80px;
-    background-color: #10212f80;
-    font-family: 'Orbitron', sans-serif;
-    padding: 15px;
-    border-radius: 15px;
-    border: 0.2px solid #6cf5f1;
-    z-index: 10;
-}
-
-.tool-menu p {
-    color: white;
-    font-size: 15px;
-    margin: 0;
-}
-
-.tool-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
-}
-
-.switch {
-  font-size: 14px;
-  position: relative;
-  display: inline-block;
-  width: 3.5em;
-  height: 2em;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  inset: 0;
-  border: 2px solid #414141;
-  border-radius: 50px;
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1.4em;
-  width: 1.4em;
-  left: 0.14em;
-  bottom: 0.14em;
-  background-color: white;
-  border-radius: inherit;
-  transition: all 0.4s cubic-bezier(0.23, 1, 0.320, 1);
-}
-
-.switch input:checked + .slider {
-  box-shadow: 0 0 20px #6cf5f1cc;
-  border: 2px solid #6cf5f1;
-}
-
-.switch input:checked + .slider:before {
-  transform: translateX(1.5em);
-}
-
-@media (max-width: 768px) {
-    #show-details {
-        font-size: 2.5vmin;
-        max-width: 70vmin;
-    }
-
-    .tool-menu p {
-        font-size: 2.5vmin;
-    }
-
-    .switch {
-        font-size: 3vmin;
-    }
+    
 }
