--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -68,7 +68,13 @@
 
 @media (max-width: 992px) { /* Adjusted breakpoint */
   .header {
-    padding: 1.25rem;
+    gap: 10vw;
+    padding: 0 1rem;
+    height: 5em;
+  }
+
+  .header h1 a {
+    font-size: 1.5rem;
   }
   .hamburger {
     display: flex;
@@ -76,12 +82,11 @@
   .header nav {
     position: fixed;
     top: 0;
+    width: 0;
     visibility: hidden;
-    right: -100%;
-    width: 100%;
-    height: 100vh;
+    height: 0;
     background: rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(50px);
     -webkit-backdrop-filter: blur(10px);
     transition: right 0.4s ease-in-out;
     display: flex;
@@ -90,11 +95,14 @@
   }
   .header nav.nav-active {
     visibility: visible;
+    width: 60%;
+    height: 100vh;
     right: 0;
   }
   .header nav ul {
     flex-direction: column;
     text-align: center;
+    justify-items: flex-start;
     gap: 3rem;
   }
   .header nav ul li a {
