--- a/src/components/Asteroid.css
+++ b/src/components/Asteroid.css
@@ -1,5 +1,7 @@
 /* Container styles */
 .container {
+    margin: auto;
+    margin-top: 3%;
     border-radius: 1rem;
     padding: 1.5rem;
     background-color: #000000; /* bg-gray-900 */
