--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -94,6 +94,10 @@
   }
   .header nav {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding-top: 18%;
     top: 0;
     width: 0;
     visibility: hidden;
@@ -102,8 +106,6 @@
     backdrop-filter: blur(50px);
     -webkit-backdrop-filter: blur(10px);
     transition: right 0.4s ease-in-out;
-    display: flex;
-    justify-content: center;
     align-items: center;
   }
   .header nav.nav-active {
